--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,16 @@
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui" {
+  themes: light --default, dark;
+}
+
+@plugin "daisyui/theme" {
+  name: "dark";
+  default: true;
+  --color-primary: #f4f8fb;
+  --color-secondary: #222734;
+  --color-accent: #1f2530;
+}
+
+a.active {
+  @apply text-primary bg-accent;
+}
